Add some basic dummy data Update schema

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 .idea/
+
+.history/
+
+settings.json
+.settings/
+.classpath
+.project
